--- a/Bai_5/Bai_5.vcxproj.filters
+++ b/Bai_5/Bai_5.vcxproj.filters
@@ -19,4 +19,9 @@
       <Filter>Source Files</Filter>
     </MASM>
   </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="pp.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+  </ItemGroup>
 </Project>
